infra/k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api
  namespace: weather
spec:
  type: ClusterIP
  selector:
    app: weather-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
